objects/IdMatrix_Fraud_Assessment_Response__c.object
<CustomObject>
    <fields>
        <fullName>Assessment_Factor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Factor</label>
        <referenceTo>IdMatrix_Assessment_Factor__c</referenceTo>
        <relationshipName>Fraud_Assessment_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <label>Threshold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_IdMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda IdMatrix</label>
        <referenceTo>Veda_IdMatrix__c</referenceTo>
        <relationshipLabel>IdMatrix Fraud Assessment Response</relationshipLabel>
        <relationshipName>IdMatrix_Fraud_Assessment_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IdMatrix Fraud Assessment Response</label>
    <nameField>
        <label>Fraud Assessment Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Fraud Assessment Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>